--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-mobypick_app/hidden.py
 .venv/
 *.pyc
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
